Fix menu styling on narrow devices

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -99,7 +99,8 @@ hr {
 .menu-items,
 .menu-title {
   margin: 0.5em auto;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .menu-item {
